gap fixed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -181,7 +181,10 @@ section > a > section:focus {
     flex-wrap: wrap;
     justify-content: space-evenly;
     text-align: center;
-    gap: 3em;
+}
+
+.enquete > a > section{
+    margin: 2em;
 }
 
 a > section > h1 {
